--- a/Estudos-js-css-html/Estudos Dio HTML.html
+++ b/Estudos-js-css-html/Estudos Dio HTML.html
@@ -5,6 +5,26 @@
         <title>Douglas Aguiar</title>
     </head>
      <body>
-        
+        <header>
+            <h1>Douglas Aguiar</h1>
+            </header>
+            <section>
+             <header>
+                 <h2>Posts</h2>
+             </header>   
+             <article>
+                 <header>
+                 <h3>Post 1#</h3> 
+                 </header>
+                 <p>
+                    Mussum Ipsum, <a href="https://www.linkedin.com/in/douglas-aguiar-b77302177/" target="_blank">cacilds vidis litro abertis</a>. Nec orci ornare consequat. 
+                    Praesent lacinia ultrices consectetur. Sed non ipsum felis.
+                    Admodum accumsan disputationi eu sit. Vide electram sadipscing et per.
+                   <a href="mailto:d.ferreiraaguiar@gmail.com" target="_blank">Suco de cevadiss</a> deixa as pessoas mais interessantis.
+                    Vehicula non. Ut sed ex eros. Vivamus sit amet nibh non tellus tristique interdum.   
+                 </p>
+             </article>
+            </section>
+            <footer></footer>
      </body>   
 </html>
