--- a/Estudos-js-css-html/Estudos Dio HTML.html
+++ b/Estudos-js-css-html/Estudos Dio HTML.html
@@ -2,11 +2,12 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Douglas Aguiar</title>
+        <title>Copa do mundo MLK!</title>
     </head>
      <body>
         <header>
-            <h1>Douglas Aguiar</h1>
+            <img src="Imagens/dio copa.jpg" alt="foto do personagem dio de jojo com as cores do brasil">
+            <h1>Dio</h1>
             </header>
             <section>
              <header>
@@ -15,6 +16,7 @@
              <article>
                  <header>
                  <h3>Post 1#</h3> 
+                 <img src="Imagens/jotaro copa.jpg" alt="foto do personagem jotaro dio de jojo com as cores do brasil">
                  </header>
                  <p>
                     Mussum Ipsum, <a href="https://www.linkedin.com/in/douglas-aguiar-b77302177/" target="_blank">cacilds vidis litro abertis</a>. Nec orci ornare consequat. 
@@ -25,6 +27,15 @@
                  </p>
              </article>
             </section>
-            <footer></footer>
+            <footer>
+                <ul>
+                    <li>
+                        <a href="mailto: dfaguiar2@outlook.com">Me mande um e-mail!</a>
+                    </li>
+                    <li>
+                        <a href="https://en.wikipedia.org/wiki/JoJo%27s_Bizarre_Adventure" target ="_blank">Link para voce saber o que é jojo</a>
+                    </li>
+                </ul>
+            </footer>
      </body>   
 </html>
