Atualizações e inclusão de CSS

--- a/Estudos-js-css-html/Portifolio.html
+++ b/Estudos-js-css-html/Portifolio.html
@@ -9,13 +9,24 @@
         <img src="Imagens/Douglas100x.jpg" alt="Foto do rosto de Douglas Ferreira de Aguiar">
         <h1>Quem eu sou eu?</h1>
     </header>
+    <section>
+        <p>Mussum Ipsum, cacilds vidis litro abertis. Posuere libero varius. 
+            Nullam a nisl ut ante blandit hendrerit. Aenean sit amet nisi.In elementis mé pra quem é amistosis quis leo.
+            Copo furadis é disculpa de bebadis, arcu quam euismod magna.Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.
+
+        </p>
+    </section>
+    <article>
         <section>
             <header>
                 <h2>Minha evolução no dia a dia!</h2>
             </header>
+            <p>
+                Aqui voce consegue acompanhar o dia a dia da minha evolução como dev!
+            </p>
             
 
-            <article>
+           
 
             </article>
         </section>
