Atualizacoes manhã de 25/7

--- a/Estudos-js-css-html/Estudos Dio HTML.html
+++ b/Estudos-js-css-html/Estudos Dio HTML.html
@@ -29,7 +29,7 @@
              </article>
             </section>
             <footer>
-                <ul>
+                <ul class="lista_links">
                     <li>
                         <a href="mailto: dfaguiar2@outlook.com">Me mande um e-mail!</a>
                     </li>
